<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="me.bradley.cs246finalproject.MainActivity">

    <TextView
        android:id="@+id/playerPointsTextView"
        android:layout_width="58dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:text="@string/Symbol"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highScoreTextView" />

    <NumberPicker
        android:id="@+id/electronNumberPicker"
        android:layout_width="85dp"
        android:layout_height="106dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintLeft_toLeftOf="parent" />

    <NumberPicker
        android:id="@+id/neutronNumberPicker"
        android:layout_width="85dp"
        android:layout_height="106dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <NumberPicker
        android:id="@+id/protonNumberPicker"
        android:layout_width="85dp"
        android:layout_height="106dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="28dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/nuetronTextView"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Neutron"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/neutronNumberPicker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/electronTextView"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Electron"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/electronNumberPicker"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/protonTextView"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/Proton"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/protonNumberPicker"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="327dp"
        android:layout_height="63dp"
        android:layout_marginBottom="16dp"
        android:onClick="onSubmit"
        android:text="@string/Submit"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/highScoreTextView"
        android:layout_width="58dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/targetElementTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nuetronTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/targetElementTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerPointsTextView"
        app:srcCompat="@drawable/hydrogen" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/YourScore"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/playerPointsTextView"
        app:layout_constraintEnd_toStartOf="@+id/playerPointsTextView" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/HighScore"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/highScoreTextView"
        app:layout_constraintEnd_toStartOf="@+id/highScoreTextView" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
